gccida/c2/check_asm_stack_operands
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/check_asm_stack_operands/src/reg-stack.c:1084:4: error: expected ';' after expression
rtx v23; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/check_asm_stack_operands/src/reg-stack.c:1084:5: error: use of undeclared identifier 'v23'
rtx v23; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/check_asm_stack_operands/src/reg-stack.c:1089:4: error: expected ';' after expression
rtx v28; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/check_asm_stack_operands/src/reg-stack.c:1089:5: error: use of undeclared identifier 'v28'
rtx v28; // rsi 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/check_asm_stack_operands/src/reg-stack.c:1101:6: error: use of undeclared identifier 'clobber_reg'
rtx *clobber_reg; // [rsp+A0h] [rbp-40h] 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/check_asm_stack_operands/src/reg-stack.c:1105:14: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v2 = ( int *)insn[2]; 
             ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/check_asm_stack_operands/src/reg-stack.c:1134:14: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
n_operands = recog_data_0.n_operands; 
             ^~~~~~~~~~~~
             recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/check_asm_stack_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/check_asm_stack_operands/src/reg-stack.c:1135:7: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v36 = recog_data_0.n_operands; 
      ^~~~~~~~~~~~
      recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/check_asm_stack_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/check_asm_stack_operands/src/reg-stack.c:1136:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( recog_data_0.n_operands > 0 ) 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/check_asm_stack_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/check_asm_stack_operands/src/reg-stack.c:1141:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v8 = recog_data_0.operand[v7]; 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/check_asm_stack_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/check_asm_stack_operands/src/reg-stack.c:1146:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[v7] = rtx; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/check_asm_stack_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/check_asm_stack_operands/src/reg-stack.c:1158:1: error: use of undeclared identifier 'clobber_reg'
clobber_reg = 0LL; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/check_asm_stack_operands/src/reg-stack.c:1163:1: error: use of undeclared identifier 'clobber_reg'
clobber_reg = ( rtx *)( ( char *)&v35 - ( ( 8 * v13 + 15) & 0xFFFFFFFFFFFFFFF0LL)); 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/check_asm_stack_operands/src/reg-stack.c:1163:22: error: expected expression
clobber_reg = ( rtx *)( ( char *)&v35 - ( ( 8 * v13 + 15) & 0xFFFFFFFFFFFFFFF0LL)); 
                     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/check_asm_stack_operands/src/reg-stack.c:1189:1: error: use of undeclared identifier 'clobber_reg'
clobber_reg[( int)v15] = v17; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/check_asm_stack_operands/src/reg-stack.c:1229:1: error: use of undeclared identifier 'v23'
v23 = recog_data_0.operand[v22]; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/check_asm_stack_operands/src/reg-stack.c:1229:7: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v23 = recog_data_0.operand[v22]; 
      ^~~~~~~~~~~~
      recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/check_asm_stack_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/check_asm_stack_operands/src/reg-stack.c:1230:17: error: use of undeclared identifier 'v23'
if ( *( _WORD *)v23 == 61 ) 
                ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/check_asm_stack_operands/src/reg-stack.c:1232:10: error: use of undeclared identifier 'v23'
rtuint = v23->fld[0].rtuint; 
         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/check_asm_stack_operands/src/obj/reg-stack.o] Error 1
